--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.21.4",
     "craco-less": "^1.20.0",
     "jsonp": "^0.2.1",
+    "prop-types": "^15.7.2",
+    "pubsub-js": "^1.9.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
